@@ -111,7 +111,12 @@ module ActiveMerchant #:nodoc:
       def add_invoice(post, money, options)
         post[:TrAmount] = amount(money)
         post[:TrCurrency] = CURRENCY_CODES[options[:currency] || currency(money)]
-        post[:TrCurrencyExponent] = options[:currency_exponent] || 0 if options[:apply_3d_secure] == '1'
+        # The ISK currency must have a currency exponent of 2 on the 3DS request but not on the auth request
+        if post[:TrCurrency] == '352' && options[:apply_3d_secure] == '1'
+          post[:TrCurrencyExponent] = 2
+        else
+          post[:TrCurrencyExponent] = 0
+        end
         post[:TerminalID] = options[:terminal_id] || '1'
       end
 
