@@ -90,6 +90,7 @@
 * Payeezy: Add `last_name` for `add_network_tokenization` [naashton] #4743
 * Stripe PI: Tokenize payment method at Stripe for `verify` [aenand] #4748
 * Kushki: Add support for the months and deferred fields [yunnydang] #4752
+* Borgun: Update TrCurrencyExponent for 3DS transactions with `ISK` [aenand] #4751
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
